--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "/Users/avr/Documents/github_others/testing_8709/env/bin/python3"
+    "python.pythonPath": "/Users/avr/Documents/github_others/testing_8709/env/bin/python3",
+    "python.formatting.provider": "yapf"
 }
